--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-
 name: ci
 
 on:
@@ -10,6 +9,8 @@ on:
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    env:
+      PYTHONPATH: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -19,11 +20,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Lint (ruff via pipx optional)
-        run: |
-          echo "Skipping lint step (add ruff/flake8 as needed)"
       - name: Run tests
         run: |
           pytest -q
-      - name: Build Docker
+      - name: Build Docker (optional)
         run: docker build -t yt-llm-music-suggester:ci .
