--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: api
-          image: your-repo/yt-llm-music-suggester:latest
+          image: ghcr.io/jorjd666/yt-llm-music-suggester:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
