--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,8 +1,14 @@
-
 apiVersion: v1
 kind: Service
 metadata:
   name: yt-llm-svc
+  namespace: music
+  labels:
+    app: yt-llm
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: "/metrics"
+    prometheus.io/port: "8000"   # matches container port
 spec:
   selector:
     app: yt-llm
@@ -10,4 +16,3 @@ spec:
     - name: http
       port: 80
       targetPort: 8000
-  type: ClusterIP
