--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,15 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch: {}
+
+permissions:
+  contents: read
+  packages: write
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build-test:
@@ -13,40 +22,69 @@ jobs:
       PYTHONPATH: ${{ github.workspace }}
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run tests
         run: pytest -q
 
   docker:
     needs: build-test
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - uses: actions/checkout@v4
+
+      # Enable cross-compilation for multi-arch
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build & push (multi-arch)
         uses: docker/build-push-action@v6
         with:
-          push: true
+          file: ./Dockerfile
           context: .
+          push: true
+          # Build BOTH arches so GCP (amd64) can pull
           platforms: linux/amd64,linux/arm64
+          # Tag latest and the commit SHA
           tags: |
             ghcr.io/${{ github.repository_owner }}/yt-llm-music-suggester:latest
             ghcr.io/${{ github.repository_owner }}/yt-llm-music-suggester:${{ github.sha }}
+          # Force a fresh multi-arch manifest (avoid stale single-arch cache)
+          pull: true
+          no-cache: true
+          # Keep layer cache for future runs
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # Disable provenance/SBOM to avoid unknown/unknown attestation entry
+          provenance: false
+          sbom: false
