--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,44 @@
-
+annotated-types==0.7.0
+anyio==4.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.0
+Deprecated==1.3.1
+distro==1.9.0
 fastapi==0.115.0
-uvicorn[standard]==0.30.6
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
 httpx==0.27.2
+idna==3.11
+iniconfig==2.3.0
+Jinja2==3.1.6
+jiter==0.12.0
+limits==5.6.0
+loguru==0.7.2
+MarkupSafe==3.0.3
+openai==1.51.2
+packaging==25.0
+pluggy==1.6.0
+prometheus-fastapi-instrumentator==6.0.0
+prometheus_client==0.23.1
 pydantic==2.9.2
 pydantic-settings==2.6.1
-loguru==0.7.2
-python-dotenv==1.0.1
-tenacity==9.0.0
-slowapi==0.1.9
-openai==1.51.2
+pydantic_core==2.23.4
 pytest==8.3.3
 pytest-asyncio==0.24.0
+python-dotenv==1.0.1
+PyYAML==6.0.3
 requests==2.32.3
-prometheus-fastapi-instrumentator==6.0.0
+slowapi==0.1.9
+sniffio==1.3.1
+starlette==0.38.6
+tenacity==9.0.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.30.6
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+wrapt==2.0.1
