--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,10 +4,16 @@ metadata:
   name: yt-llm-ing
   namespace: music
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: traefik
+    cert-manager.io/cluster-issuer: "letsencrypt-staging" # first use staging
 spec:
+  ingressClassName: traefik
+  tls:
+    - hosts:
+        - music.34.40.121.89.sslip.io
+      secretName: yt-llm-tls
   rules:
-    - host: localhost           # works on Docker Desktop
+    - host: music.34.40.121.89.sslip.io
       http:
         paths:
           - path: /
