--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,10 +3,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: yt-llm-config
+  namespace: music
 data:
-  OPENAI_MODEL: "gpt-4o-mini"
+  LLM_PROVIDER: "openai"
+  OPENAI_BASE_URL: "http://localhost:11434/v1"
+  OPENAI_MODEL: "llama3.1:8b"
+  RATE_LIMIT: "10/minute"
   MAX_YT_RESULTS: "25"
   MAX_SUGGESTIONS: "10"
   REQUESTS_TIMEOUT: "10"
-  LLM_PROVIDER: "openai"
-  RATE_LIMIT: "10/minute"
