--- a/infra/ansible/site.yml
+++ b/infra/ansible/site.yml
@@ -20,7 +20,7 @@
 
     # Ollama controls
     enable_ollama: "{{ ENABLE_OLLAMA | default(true) }}"
-    ollama_model: "{{ OLLAMA_MODEL | default('llama3.1:8b') }}"
+    ollama_model: "{{ OLLAMA_MODEL | default('llama3.2:3b') }}"
 
     # ---- derived ----
     issuer_name: >-
@@ -142,6 +142,14 @@
       when: enable_ollama | bool
       shell: |
         ollama pull {{ ollama_model }}
+      args:
+        executable: /bin/bash
+      tags: [ollama]
+
+    - name: Remove large Ollama model llama3.1:8b if present
+      when: enable_ollama | bool
+      shell: |
+        ollama rm llama3.1:8b || true
       args:
         executable: /bin/bash
       tags: [ollama]
